--- a/src/main/resources/templates/menu/button1/autoChess.html
+++ b/src/main/resources/templates/menu/button1/autoChess.html
@@ -17,7 +17,7 @@
                     <div id="pading">
                         <article class="featured-article">	
                             <ul  class="nav justify-content-center">
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/"><h3>Dota&nbsp;2 Auto Chess<sup class="featured-article__tag__count" th:text="${sumSkill}"></sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/"><h3>Dota&nbsp;2 Auto Chess</h3></a></span>
 
                             </ul>		
 
@@ -25,20 +25,21 @@
                 
                             <ul  class="nav justify-content-center">
                                 <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/hero"><h3><i class="fa-solid fa-chess-pawn"></i><t class="t1">Герои<sup class="featured-article__tag__count" th:text="${sumHero}"></sup></t></h3></a></span>
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/weapon"><h3><t class="t1">Предметы<sup class="featured-article__tag__count" th:text="${sumItems}"></sup></t></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/items"><h3><t class="t1">Предметы<sup class="featured-article__tag__count" th:text="${sumItems}"></sup></t></h3></a></span>
                             </ul>
                             <ul  class="nav justify-content-center">
                                 <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/ras"><h3><t class="t1">Расы<sup class="featured-article__tag__count" th:text="${sumRas}"></sup></t></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/skill"><h3>Абилки<sup class="featured-article__tag__count" th:text="${sumSkill}"></sup></h3></a></span>
+                            </ul>
+                            <ul  class="nav justify-content-center">
                                 <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/class"><h3><t class="t1">Классы<sup class="featured-article__tag__count" th:text="${sumClass}"></sup></t></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/guide"><h3><t class="t1">Гайды<sup class="featured-article__tag__count" th:text="${guide}"></sup></t></h3></a></span>
                             </ul>
                             <ul  class="nav justify-content-center">
                                 <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/path"><h3><t class="t1">Патчи</t></h3></a></span>
                                 <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/whatgame"><h3><t class="t1">Механика игры</t></h3></a></span>
                             </ul>
-                            <ul  class="nav justify-content-center">
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/skill"><h3>Абилки<sup class="featured-article__tag__count" th:text="${sumSkill}"></sup></h3></a></span>
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/guide"><h3><t class="t1">Гайды<sup class="featured-article__tag__count" th:text="${guide}"></sup></t></h3></a></span>
-                            </ul>
+
                 
                         </article>
                     </div>
