--- a/src/main/resources/templates/menu/button1/autoChessAdmin.html
+++ b/src/main/resources/templates/menu/button1/autoChessAdmin.html
@@ -24,14 +24,17 @@
                             <p class="h2">Dota&nbsp;2 Auto Chess</p>
                 
                             <ul  class="nav justify-content-center">
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/hero"><h3><i class="fa-solid fa-chess-pawn"></i>Герои<sup class="featured-article__tag__count" th:text="${sumHero}"></sup></h3></a></span>
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/items"><h3>Предметы<sup class="featured-article__tag__count" th:text="${sumItems}"></sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-light" href="/admin/display/hero"><h3><i class="fa-solid fa-chess-pawn"></i>Герои<sup class="featured-article__tag__count" th:text="${sumHero}"></sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-light" href="/admin/display/items"><h3>Предметы<sup class="featured-article__tag__count" th:text="${sumItems}"></sup></h3></a></span>
                             </ul>
                             <ul  class="nav justify-content-center">
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/ras"><h3>Расы<sup class="featured-article__tag__count" th:text="${sumRas}"></sup></h3></a></span>
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/path"><h3><t class="t1">Патчи</t></h3></a></span>
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/class"><h3>Классы<sup class="featured-article__tag__count" th:text="${sumClass}"></sup></h3></a></span>
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/skill"><h3>Абилка<sup class="featured-article__tag__count" th:text="${sumSkill}"></sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-light" href="/admin/display/ras"><h3>Расы<sup class="featured-article__tag__count" th:text="${sumRas}"></sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-light" href="/admin/display/class"><h3>Классы<sup class="featured-article__tag__count" th:text="${sumClass}"></sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-light" href="/admin/display/energising"><h3>Синергии<sup class="featured-article__tag__count" th:text="${sumRas}"></sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-light" href="/admin/display/skill"><h3>Абилка<sup class="featured-article__tag__count" th:text="${sumSkill}"></sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/guide"><h3><t class="t1">Гайды<sup class="featured-article__tag__count" th:text="${guide}"></sup></t></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-light" href="/admin/display/path"><h3><t class="t1">Патчи</t></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-light" href="/admin/display/newWebSite"><h3><t class="t1">ОбновлениеСайта</t></h3></a></span>
                             </ul>
 
                 
