--- a/src/main/resources/templates/menu/button4/admin/newWebSite/newWebSiteAdd.html
+++ b/src/main/resources/templates/menu/button4/admin/newWebSite/newWebSiteAdd.html
@@ -13,14 +13,14 @@
 
 
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-            <h1>Изменения птча</h1>
-            <form th:action="'/admin/edit/path/' + ${path.id}" method="post" enctype="multipart/form-data">
+            <h1>Добавление птча</h1>
+            <form th:action="@{/admin/add/newWebSite}" method="post" enctype="multipart/form-data">
 
-                <input type="text" name="name" th:value="${path.name}" placeholder="Ведите имя Патча" class="form-control"><br>
+                <input type="text" name="name" placeholder="Ведите имя Патча" class="form-control"><br>
 
-                <textarea name="full_text" th:text="${path.full_text}" placeholder="Ведите полное описание патча" class="form-control" rows="20"></textarea><br>
+                <textarea name="full_text" placeholder="Ведите полное описание патча" class="form-control" rows="20"></textarea><br>
 
-                <button type="submit" class="btn btn-success">Обновить</button>
+                <button type="submit" class="btn btn-success">Добавить</button>
             </form>
 
         </main>
