--- a/src/main/resources/templates/blocks/headerFooter/header.html
+++ b/src/main/resources/templates/blocks/headerFooter/header.html
@@ -71,7 +71,7 @@
                     <li>
                         <hr class="dropdown-divider">
                     </li>
-                    <li><a class="dropdown-item" href="/home/display/synergy">Синергии</a></li>
+                    <li><a class="dropdown-item" href="/home/display/energising">Синергии</a></li>
                 </ul>
 
             </div>
