--- a/src/main/resources/templates/menu/button2/admin/class/classAdd.html
+++ b/src/main/resources/templates/menu/button2/admin/class/classAdd.html
@@ -15,12 +15,13 @@
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
             <h1>Добавление класса</h1>
             <form th:action="@{/admin/add/class}" method="post" enctype="multipart/form-data">
-                <p>вставте икону класса
-                <input type="file" name="iconClassHero">
-                </p>
-                <input type="text" name="classHero" placeholder="Ведите имя класса" class="form-control"><br>
+                <input type="text" name="classHero" list="datalistOptions" id="exampleDataList"  placeholder="Ведите имя класса" class="form-control"><br>
 
-                <textarea name="full_text" placeholder="Ведите полное описание класса" class="form-control" rows="20"></textarea><br>
+                <datalist id="datalistOptions">
+                    <option th:each="classHero : ${class}" th:value="${classHero.name}"></option>
+
+                </datalist>
+
 
                 <button type="submit" class="btn btn-success">Добавить</button>
             </form>
