--- a/src/main/resources/templates/menu/button2/admin/class/classDisplay.html
+++ b/src/main/resources/templates/menu/button2/admin/class/classDisplay.html
@@ -27,17 +27,19 @@
             </thead>
 
             <tbody>
+
+
             <tr th:each="classHero : ${class}">
 
 
-              <td><img  th:if="${classHero.id}" th:src="'/images/class/' + ${classHero.id}"></td>
+              <td><img th:if="${classHero.energising.energisingImage}" th:src="'/images/energising/' + ${classHero.energising.energisingImage.id}"></td>
 
               <td><a th:href="'/admin/detals/class/' +${classHero.id}"  class="link-secondary">
                 <t th:text="${classHero.name}"></t>
               </a></td>
 
               <td>
-                <t th:text="${classHero.detals}"></t>
+                <t th:text="${classHero.energising.full_text}"></t>
               </td>
               <td><a th:href="'/admin/delete/class/' + ${classHero.id}">Удалить</a><br>
                 <a th:href="'/admin/edit/class/' + ${classHero.id}">Изменит</a></td>
