--- a/src/main/resources/templates/menu/button2/admin/class/classEdit.html
+++ b/src/main/resources/templates/menu/button2/admin/class/classEdit.html
@@ -16,12 +16,7 @@
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
             <h1>Обнавление Класса</h1>
             <form th:action="@{'/admin/edit/class/' + ${class.id}} " method="post" enctype="multipart/form-data">
-                <p>вставте икону класа
-                    <input type="file" name="iconClassHero" th:value="${iconClassHero}">
-                </p>
-                <input th:value="${class.name}" type="text" name="className"  placeholder="Ведите имя класса" class="form-control"><br>
-
-                <textarea name="detals" th:text="${class.detals}" class="form-control" rows="20"></textarea><br>
+                <input th:value="${class.name}" type="text" name="name"  placeholder="Ведите имя класса" class="form-control"><br>
 
                 <button type="submit" class="btn btn-success">Обновить</button>
                 <a th:href="@{'/admin/delete/class/' + ${class.id}}" class="btn btn-success">Удалить</a>
