--- a/src/main/resources/templates/menu/button2/admin/hero/heroAdd.html
+++ b/src/main/resources/templates/menu/button2/admin/hero/heroAdd.html
@@ -17,7 +17,7 @@
             <h1>Добавление героя</h1>
             <form th:action="@{/admin/add/hero}" method="post" enctype="multipart/form-data">
                 <p>вставте икону героя
-                <input type="file" name="iconHero">
+                <input type="file" name="iconHero" required>
                 </p>
 
                 <input type="text" name="hero" placeholder="Ведите имя героя" class="form-control"><br>
