--- a/src/main/resources/templates/menu/button2/admin/hero/heroEdit.html
+++ b/src/main/resources/templates/menu/button2/admin/hero/heroEdit.html
@@ -15,40 +15,45 @@
 
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4" th:each="hero : ${detals}">
             <h1>Обнавление Героя</h1>
-            <form th:action="@{'/admin/edit/hero/' + ${hero.hero.id}} " method="post" enctype="multipart/form-data">
+            <form th:action="'/admin/edit/hero/' + ${detals.id} " method="post" enctype="multipart/form-data">
                 <p>вставте икону героя
-                    <input type="file" name="iconHero" th:value="${hero.iconHero}">
+                    <input type="file" name="iconHero">
                 </p>
-                <input th:value="${hero.hero.nameHero}" type="text" name="hero"  placeholder="Ведите имя героя" class="form-control"><br>
+                <div th:if="${detals}">
+                        <input  th:value="${detals.nameHero}" type="text" name="hero"  placeholder="Ведите имя героя" class="form-control"><br>
 
-                <input th:value="${hero.hero.tirHero}" list="datalistOptions" type="text" name="tear" placeholder="видите тир героя" class="form-control"><br>
-                <datalist id="datalistOptions">
-                    <option value="ТИР 1">
-                    <option value="ТИР 2">
-                    <option value="ТИР 3">
-                    <option value="ТИР 4">
-                    <option value="ТИР 5">
-                </datalist>
+                        <input th:value="${detals.tirHero}" list="datalistOptions" type="text" name="tear" placeholder="видите тир героя" class="form-control"><br>
+                        <datalist id="datalistOptions">
+                            <option value="ТИР 1">
+                            <option value="ТИР 2">
+                            <option value="ТИР 3">
+                            <option value="ТИР 4">
+                            <option value="ТИР 5">
+                        </datalist>
 
-                <input th:value="${hero.hero.classHero}" list="datalistOptions1" type="text" name="classHero" placeholder="Ведите расу героя" class="form-control"><br>
-                <datalist id="datalistOptions1">
-                    <option th:each="class1 : ${ras}"> <t th:text="${class1.name}"></t></option>
-                </datalist>
+                        <input th:if="${detals.energising}" th:value="${detals.energising.name}" list="datalistOptions1" type="text" name="classHero" placeholder="Ведите расу героя" class="form-control"><br>
+                        <input th:if="${detals.energising == null}" list="datalistOptions1" type="text" name="classHero" placeholder="Ведите расу героя" class="form-control"><br>
+                        <datalist id="datalistOptions1">
+                            <option th:each="class1 : ${ras}"> <t th:text="${class1.name}"></t></option>
+                        </datalist>
 
-                <input th:value="${hero.hero.classHero1}" list="datalistOptions2" type="text" name="classHero1" placeholder="Ведите класс героя" class="form-control"><br>
-                <datalist id="datalistOptions2">
-                    <option th:each="class1 : ${class}"> <t th:text="${class1.name}"></t></option>
-                </datalist>
+                        <input th:if="${detals.energising1}" th:value="${detals.energising1.name}" list="datalistOptions2" type="text" name="classHero1" placeholder="Ведите класс героя" class="form-control"><br>
+                        <input th:if="${detals.energising1 == null}" list="datalistOptions1" type="text" name="classHero1" placeholder="Ведите расу героя" class="form-control"><br>
+                        <datalist id="datalistOptions2">
+                            <option th:each="class1 : ${class}"> <t th:text="${class1.name}"></t></option>
+                        </datalist>
 
-                <input th:value="${hero.hero.classHero2}" list="datalistOptions3" type="text" name="classHero2" placeholder="Ведите класс героя" class="form-control"><br>
-                <datalist id="datalistOptions3">
-                    <option th:each="class1 : ${class}"> <t th:text="${class1.name}"></t></option>
-                </datalist>
+                        <input th:if="${detals.energising2}" th:value="${detals.energising2.name}" list="datalistOptions3" type="text" name="classHero2" placeholder="Ведите класс героя" class="form-control"><br>
+                        <input th:if="${detals.energising2 == null}" list="datalistOptions1" type="text" name="classHero2" placeholder="Ведите расу героя" class="form-control"><br>
+                        <datalist id="datalistOptions3">
+                            <option th:each="class1 : ${class}"> <t th:text="${class1.name}"></t></option>
+                        </datalist>
 
-                <textarea  th:text="${hero.hero.full_text}" name="full_text" class="form-control" rows="20"></textarea><br>
+                        <textarea  th:text="${detals.full_text}" name="full_text" class="form-control" rows="20"></textarea><br>
 
-                <button type="submit" class="btn btn-success">Обновить</button>
-                <a th:href="@{'/admin/delete/hero/' + ${hero.hero.id}}" class="btn btn-success">Удалить</a>
+                        <button type="submit" class="btn btn-success">Обновить</button>
+                        <a th:href="'/admin/delete/hero/' + ${detals.id}" class="btn btn-success">Удалить</a>
+                </div>
             </form>
 
         </main>
