--- a/src/main/resources/templates/menu/button2/user/hero/heroDisplay.html
+++ b/src/main/resources/templates/menu/button2/user/hero/heroDisplay.html
@@ -8,200 +8,214 @@
 
 <body>
 <header th:insert="blocks/headerFooter/header :: header"></header>
-<div class="border border-dark" id="pading">
-
-    <div class="container-fluid" id="t">
-
-            <div id="blokc">
+<div class="border border-dark">
+<div class="container-fluid" id="t">
+    <div class="row">
 
 
-                <div class="inline-block-table">
-                    <table class="table table-borderless">
+                <div class="inline-block-table" display="flex">
+
+                    <table class="table table-borderless" style="width:19%;table-layout:fixed">
                         <thead>
                         <tr>
-                            <th colspan="3">1$Фигуры
+                            <th colspan="5" style="width:19%">1$Фигуры
                             </th>
                         </tr>
                         </thead>
 
                         <tbody>
-                        <tr th:each="hero1 : ${displayHeroTir1}">
 
 
-                            <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
-                            <td><a th:href="'/home/display/hero/' +${hero1.hero.id}" class="link-secondary">
-                                <t th:text="${hero1.hero.nameHero}"></t>
+                        <tr  th:each="hero : ${displayHeroTir1}">
+                            <td><img th:if="${hero.imageHero}" th:src="'/images/hero/' + ${hero.imageHero.id}"></td>
+
+
+                            <td><a th:href="'/home/detals/hero/' +${hero.id}" class="link-secondary">
+                                <t th:text="${hero.nameHero}"></t>
                             </a></td>
 
-                            <td>
-                                <img th:src="'/images/ras/' + ${hero1.iconClassHero}" height="20px" width="20px">
+                            <th><img th:if="${hero.energising}" th:src="'/images/energising/' + ${hero.energising.energisingImage.id}" height="20px" width="20px"></th>
 
+                            <th><img th:if="${hero.energising1}" th:src="'/images/energising/' + ${hero.energising1.energisingImage.id}" height="20px" width="20px">
 
-                                <img th:src="'/images/class/' + ${hero1.iconClassHero1}" height="20px" width="20px">
+                            </th>
+                            <th><img th:if="${hero.energising2}" th:src="'/images/energising/' + ${hero.energising2.energisingImage.id}" alt="" height="20px">
 
-
-                                <img th:src="'/images/class/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
-                                     onerror="this.style.visibility = 'hidden'"></td>
-
-                        </tr>
-
-
-                        </tbody>
-                    </table>
-                </div>
-
-                <div class="inline-block-table">
-                    <table class="table table-borderless">
-                        <thead>
-                        <tr>
-                            <th colspan="3">2$Фигуры
                             </th>
                         </tr>
-                        </thead>
-
-                        <tbody>
-                        <tr th:each="hero1 : ${displayHeroTir2}">
-
-
-                            <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
-
-                            <td><a th:href="'/home/display/hero/' +${hero1.hero.id}" class="link-secondary">
-                                <t th:text="${hero1.hero.nameHero}"></t>
-                            </a></td>
-
-                            <td>
-                                <img th:src="'/images/ras/' + ${hero1.iconClassHero}" height="20px" width="20px">
-
-
-                                <img th:src="'/images/class/' + ${hero1.iconClassHero1}" height="20px" width="20px">
-
-
-                                <img th:src="'/images/class/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
-                                     onerror="this.style.visibility = 'hidden'"></td>
-
-                        </tr>
-
 
                         </tbody>
+
                     </table>
-                </div>
-                <div class="inline-block-table">
 
-                    <table class="table table-borderless">
-                        <thead>
-                        <tr>
-                            <th colspan="3">3$Фигуры
-                            </th>
-                        </tr>
-                        </thead>
-
-                        <tbody>
-                        <tr th:each="hero1 : ${displayHeroTir3}">
-
-
-                            <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
-                            <td><a th:href="'/home/display/hero/' +${hero1.hero.id}" class="link-secondary">
-                                <t th:text="${hero1.hero.nameHero}"></t>
-                            </a></td>
-
-                            <td>
-                                <img th:src="'/images/ras/' + ${hero1.iconClassHero}" height="20px" width="20px">
-
-
-                                <img th:src="'/images/class/' + ${hero1.iconClassHero1}" height="20px" width="20px">
-
-
-                                <img th:src="'/images/class/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
-                                     onerror="this.style.visibility = 'hidden'"></td>
-
-                        </tr>
-
-
-                        </tbody>
-                    </table>
-                </div>
-
-                <div class="inline-block-table">
-
-                    <table class="table table-borderless">
-                        <thead>
-                        <tr>
-                            <th colspan="3">4$Фигуры
-                            </th>
-                        </tr>
-                        </thead>
-
-                        <tbody>
-                        <tr th:each="hero1 : ${displayHeroTir4}">
-
-
-                            <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
-                            <td><a th:href="'/home/display/hero/' +${hero1.hero.id}" class="link-secondary">
-                                <t th:text="${hero1.hero.nameHero}"></t>
-                            </a></td>
-
-                            <td>
-                                <img th:src="'/images/ras/' + ${hero1.iconClassHero}" height="20px" width="20px">
-
-
-                                <img th:src="'/images/class' + ${hero1.iconClassHero1}" height="20px" width="20px">
-
-
-                                <img th:src="'/images/class' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
-                                     onerror="this.style.visibility = 'hidden'"></td>
-
-                        </tr>
-
-
-                        </tbody>
-                    </table>
-                </div>
-                <div class="inline-block-table">
-                    <table class="table table-borderless">
-                        <thead>
-                        <tr>
-                            <th colspan="3">5$Фигуры
-                            </th>
-                        </tr>
-                        </thead>
-
-                        <tbody>
-                        <tr th:each="hero1 : ${displayHeroTir5}">
-
-
-                            <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
-                            <td><a th:href="'/home/display/hero/' +${hero1.hero.id}" class="link-secondary">
-                                <t th:text="${hero1.hero.nameHero}"></t>
-                            </a></td>
-
-                            <td>
-                                <img th:src="'/images/ras/' + ${hero1.iconClassHero}" height="20px" width="20px">
-
-
-                                <img th:src="'/images/class/' + ${hero1.iconClassHero1}" height="20px" width="20px">
-
-
-                                <img th:src="'/images/class/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
-                                     onerror="this.style.visibility = 'hidden'"></td>
-
-                        </tr>
-
-
-                        </tbody>
-                    </table>
 
                 </div>
 
 
-            </div>
+                    <div class="inline-block-table" display="flex">
+
+                        <table class="table table-borderless" style="width:19%;table-layout:fixed">
+                            <thead>
+                            <tr>
+                                <th colspan="5" style="width:19%">2$Фигуры
+                                </th>
+                            </tr>
+                            </thead>
+
+                            <tbody>
+
+
+                            <tr  th:each="hero : ${displayHeroTir2}">
+                                <td><img th:if="${hero.imageHero}" th:src="'/images/hero/' + ${hero.imageHero.id}">
+                                    </td>
+
+                                <td><a th:href="'/home/detals/hero/' +${hero.id}" class="link-secondary">
+                                    <t th:text="${hero.nameHero}"></t>
+                                </a></td>
+
+                                <th><img th:if="${hero.energising}" th:src="'/images/energising/' + ${hero.energising.energisingImage.id}" height="20px" width="20px"></th>
+
+                                <th><img th:if="${hero.energising1}" th:src="'/images/energising/' + ${hero.energising1.energisingImage.id}" height="20px" width="20px">
+
+                                </th>
+                                <th><img th:if="${hero.energising2}" th:src="'/images/energising/' + ${hero.energising2.energisingImage.id}" alt="" height="20px">
+
+                                </th>
+                            </tr>
+
+                            </tbody>
+
+                        </table>
+
+
+                    </div>
+
+
+                        <div class="inline-block-table" display="flex">
+
+                            <table class="table table-borderless" style="width:19%;table-layout:fixed">
+                                <thead>
+                                <tr>
+                                    <th colspan="5" style="width:19%">3$Фигуры
+                                    </th>
+                                </tr>
+                                </thead>
+
+                                <tbody>
+
+
+                                <tr  th:each="hero : ${displayHeroTir3}">
+                                    <td><img th:if="${hero.imageHero}" th:src="'/images/hero/' + ${hero.imageHero.id}">
+                                        </td>
+
+                                    <td><a th:href="'/home/detals/hero/' +${hero.id}" class="link-secondary">
+                                        <t th:text="${hero.nameHero}"></t>
+                                    </a></td>
+
+                                    <th><img th:if="${hero.energising}" th:src="'/images/energising/' + ${hero.energising.energisingImage.id}" height="20px" width="20px"></th>
+
+                                    <th><img th:if="${hero.energising1}" th:src="'/images/energising/' + ${hero.energising1.energisingImage.id}" height="20px" width="20px">
+
+                                    </th>
+                                    <th><img th:if="${hero.energising2}" th:src="'/images/energising/' + ${hero.energising2.energisingImage.id}" alt="" height="20px">
+
+                                    </th>
+                                </tr>
+
+                                </tbody>
+
+                            </table>
+
+
+                        </div>
+
+
+                            <div class="inline-block-table" display="flex">
+
+                                <table class="table table-borderless" style="width:19%;table-layout:fixed">
+                                    <thead>
+                                    <tr>
+                                        <th colspan="5" style="width:19%">4$Фигуры
+                                        </th>
+                                    </tr>
+                                    </thead>
+
+                                    <tbody>
+
+
+                                    <tr  th:each="hero : ${displayHeroTir4}">
+                                        <td><img th:if="${hero.imageHero}" th:src="'/images/hero/' + ${hero.imageHero.id}">
+                                            </td>
+
+                                        <td><a th:href="'/home/detals/hero/' +${hero.id}" class="link-secondary">
+                                            <t th:text="${hero.nameHero}"></t>
+                                        </a></td>
+
+                                        <th><img th:if="${hero.energising}" th:src="'/images/energising/' + ${hero.energising.energisingImage.id}" height="20px" width="20px"></th>
+
+                                        <th><img th:if="${hero.energising1}" th:src="'/images/energising/' + ${hero.energising1.energisingImage.id}" height="20px" width="20px">
+
+                                        </th>
+                                        <th><img th:if="${hero.energising2}" th:src="'/images/energising/' + ${hero.energising2.energisingImage.id}" alt="" height="20px">
+
+                                        </th>
+                                    </tr>
+
+                                    </tbody>
+
+                                </table>
+
+
+                            </div>
+
+
+                                <div class="inline-block-table" display="flex">
+
+                                    <table class="table table-borderless" style="width:19%;table-layout:fixed">
+                                        <thead>
+                                        <tr>
+                                            <th colspan="5" style="width:19%">5$Фигуры
+                                            </th>
+                                        </tr>
+                                        </thead>
+
+                                        <tbody>
+
+
+                                        <tr  th:each="hero : ${displayHeroTir5}">
+                                            <td><img th:if="${hero.imageHero}" th:src="'/images/hero/' + ${hero.imageHero.id}">
+                                                </td>
+
+                                            <td><a th:href="'/home/detals/hero/' +${hero.id}" class="link-secondary">
+                                                <t th:text="${hero.nameHero}"></t>
+                                            </a></td>
+
+                                            <th><img th:if="${hero.energising}" th:src="'/images/energising/' + ${hero.energising.energisingImage.id}" height="20px" width="20px"></th>
+
+                                            <th><img th:if="${hero.energising1}" th:src="'/images/energising/' + ${hero.energising1.energisingImage.id}" height="20px" width="20px">
+
+                                            </th>
+                                            <th><img th:if="${hero.energising2}" th:src="'/images/energising/' + ${hero.energising2.energisingImage.id}" alt="" height="20px">
+
+                                            </th>
+                                        </tr>
+
+                                        </tbody>
+
+                                    </table>
+
+
+                                </div>
 
     </div>
 </div>
-<footer th:insert="blocks/headerFooter/footer :: footer"></footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
 </div>
+
+    <footer th:insert="blocks/headerFooter/footer :: footer"></footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+
 
 </body>
 </html>
