--- a/src/main/resources/templates/menu/button2/user/items/itemsDisplay.html
+++ b/src/main/resources/templates/menu/button2/user/items/itemsDisplay.html
@@ -8,60 +8,253 @@
 
 <body>
 <header th:insert="blocks/headerFooter/header :: header"></header>
-
+<div class="border border-dark">
 <div class="container-fluid" id="t">
 
 
-    <div id="blokc">
 
-        <div class="border border-dark" id="pading">
+        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
 
-            <table class="table">
-                <thead>
-                <tr>
-                    <td colspan=3>Т1 Предмет
-                    </th>
-                    <td colspan=3>Т2 Предмет
-                    </th>
-                    <td colspan=3>Т3 Предмет
-                    </th>
-                    <td colspan=3>Т4 Предмет
-                    </th>
-                    <td colspan=3>Т5 Предмет
-                    </th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <th>иконка</th>
-                    <td>название</td>
-                    <td>расса класс</td>
 
-                    <th>иконка</th>
-                    <td>название</td>
-                    <td>расса класс</td>
 
-                    <th>иконка</th>
-                    <td>название</td>
-                    <td>расса класс</td>
+                    <tb>
 
-                    <th>иконка</th>
-                    <td>название</td>
-                    <td>расса класс</td>
 
-                    <th>иконка</th>
-                    <td>название</td>
-                    <td>расса класс</td>
-                </tr>
+                        <div class="inline-block-table" display="flex">
+
+                            <table class="table table-borderless" style="width:19%;table-layout:fixed">
+                                <thead>
+                                <tr>
+                                    <th colspan="5" style="width:19%">1$Предметы
+                                    </th>
+                                </tr>
+                                </thead>
+
+                                <tbody th:each="items1 : ${displayItemsTir1}">
+
+
+                                <tr>
+                                    <td><img th:src="'/images/items/' + ${items1.icon.id}">
+
+
+                                    <td><a th:href="'/home/detals/items/' +${items1.id}" class="link-secondary">
+                                    <t th:text="${items1.name}"></t></a>
+
+
+                                    <th><img th:if="${items1.items1}" th:src="'/images/items/' + ${items1.items1}"
+                                             height="20px" width="20px"></th>
+
+                                    <th><img th:if="${items1.items2}"
+                                             th:src="'/images/items/' + ${items1.items2}" height="20px" width="20px">
+
+                                    </th>
+                                    <th><img th:if="${items1.items3}"
+                                             th:src="'/images/items/' + ${items1.items3}"  height="20px"  width="20px">
+
+                                    </th>
+                                </tr>
+
+                                </tbody>
+
+                            </table>
+
+
+                        </div>
+                    </tb>
+                    <tb>
+
+
+                        <div class="inline-block-table" display="flex">
+
+                            <table class="table table-borderless" style="width:19%;table-layout:fixed">
+                                <thead>
+                                <tr>
+                                    <th colspan="5" style="width:19%">2$Предметы
+                                    </th>
+                                </tr>
+                                </thead>
+
+                                <tbody th:each="items1 : ${displayItemsTir2}">
+
+
+                                <tr>
+                                    <td><img th:src="'/images/items/' + ${items1.id}">
+                                        </td>
+
+                                    <td><a th:href="'/home/detals/items/' +${items1.id}" class="link-secondary">
+                                        <t th:text="${items1.name}"></t></a></td>
+
+                                    <th><img th:if="${items1.items1}" th:src="'/images/items/' + ${items1.items1}"
+                                             height="20px" width="20px"></th>
+
+                                    <th><img th:if="${items1.items2}"
+                                             th:src="'/images/items/' + ${items1.items2}" height="20px" width="20px">
+
+                                    </th>
+                                    <th><img th:if="${items1.items3}"
+                                             th:src="'/images/items/' + ${items1.items3}"  height="20px"  width="20px">
+
+                                    </th>
+                                </tr>
+
+                                </tbody>
+
+                            </table>
+
+
+                        </div>
+                    </tb>
+
+                    <tb>
+
+
+                        <div class="inline-block-table" display="flex">
+
+                            <table class="table table-borderless" style="width:19%;table-layout:fixed">
+                                <thead>
+                                <tr>
+                                    <th colspan="5" style="width:19%">3$Предметы
+                                    </th>
+                                </tr>
+                                </thead>
+
+                                <tbody th:each="items1 : ${displayItemsTir3}">
+
+
+                                <tr>
+                                    <td><img th:src="'/images/items/' + ${items1.id}">
+                                       </td>
+
+                                    <td><a th:href="'/home/detals/items/' +${items1.id}" class="link-secondary">
+                                        <t th:text="${items1.name}"></t>
+                                    </a></td>
+
+                                    <th><img th:if="${items1.items1}" th:src="'/images/items/' + ${items1.items1}"
+                                             height="20px" width="20px"></th>
+
+                                    <th><img th:if="${items1.items2}"
+                                             th:src="'/images/items/' + ${items1.items2}" height="20px" width="20px">
+
+                                    </th>
+                                    <th><img th:if="${items1.items3}"
+                                             th:src="'/images/items/' + ${items1.items3}"  height="20px"  width="20px">
+
+                                    </th>
+                                </tr>
+
+                                </tbody>
+
+                            </table>
+
+
+                        </div>
+                    </tb>
+
+                    <tb>
+
+
+                        <div class="inline-block-table" display="flex">
+
+                            <table class="table table-borderless" style="width:19%;table-layout:fixed">
+                                <thead>
+                                <tr>
+                                    <th colspan="5" style="width:19%">4$Предметы
+                                    </th>
+                                </tr>
+                                </thead>
+
+                                <tbody th:each="items1 : ${displayItemsTir4}">
+
+
+                                <tr>
+                                    <td><img th:src="'/images/items/name/' + ${items1.name}">
+                                        </td>
+
+                                    <td><a th:href="'/home/detals/items/' +${items1.id}" class="link-secondary">
+                                        <t th:text="${items1.name}"></t>
+                                    </a></td>
+
+                                    <th><img th:if="${items1.items1}" th:src="'/images/items/' + ${items1.items1}"
+                                             height="20px" width="20px"></th>
+
+                                    <th><img th:if="${items1.items2}"
+                                             th:src="'/images/items/' + ${items1.items2}" height="20px" width="20px">
+
+                                    </th>
+                                    <th><img th:if="${items1.items3}"
+                                             th:src="'/images/items/' + ${items1.items3}"  height="20px"  width="20px">
+
+                                    </th>
+                                </tr>
+
+                                </tbody>
+
+                            </table>
+
+
+                        </div>
+                    </tb>
+
+                    <tb>
+
+
+                        <div class="inline-block-table" display="flex">
+
+                            <table class="table table-borderless" style="width:19%;table-layout:fixed">
+                                <thead>
+                                <tr>
+                                    <th colspan="5" style="width:19%">5$Предметы
+                                    </th>
+                                </tr>
+                                </thead>
+
+                                <tbody th:each="items1 : ${displayItemsTir5}">
+
+
+                                <tr>
+                                    <td><img th:src="'/images/items/' + ${items1.id}">
+                                        </td>
+
+                                    <td><a th:href="'/home/detals/items/' +${items1.id}" class="link-secondary">
+                                        <t th:text="${items1.name}"></t>
+                                    </a></td>
+
+                                    <th><img th:if="${items1.items1}" th:src="'/images/items/' + ${items1.items1}"
+                                             height="20px" width="20px"></th>
+
+                                    <th><img th:if="${items1.items2}"
+                                             th:src="'/images/items/' + ${items1.items2}" height="20px" width="20px">
+
+                                    </th>
+                                    <th><img th:if="${items1.items3}"
+                                             th:src="'/images/items/' + ${items1.items3}"  height="20px"  width="20px">
+
+                                    </th>
+                                </tr>
+
+                                </tbody>
+
+                            </table>
+
+
+                        </div>
+                    </tb>
+
+
+
+
+
 
             </table>
 
-        </div>
+        </main>
+</div>
         <footer th:insert="blocks/headerFooter/footer :: footer"></footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
-    </div>
+
+    
 </div>
 </body>
 </html>
