--- a/src/main/resources/templates/menu/button2/user/ras/rasDisplay.html
+++ b/src/main/resources/templates/menu/button2/user/ras/rasDisplay.html
@@ -8,36 +8,33 @@
 
 <body>
 <header th:insert="blocks/headerFooter/header :: header"></header>
-
+<div class="border border-dark">
 <div class="container-fluid" id="t">
   <div class="row">
-    <div id="blokc">
-
-
-
-      <div class="border border-dark" id="pading">
 
         <div class="inline-block-table">
           <table class="table table-borderless">
             <thead>
             <tr>
-              <th colspan="3">Расса
+              <th colspan="4">Расы
               </th>
             </tr>
             </thead>
 
             <tbody>
-            <tr th:each="classHero : ${id}">
+            <tr th:each="rasHero : ${ras}">
 
 
-              <td><img th:src="'/images/class/' + ${classHero.id}"></td>
+              <td><img th:if="${rasHero.energising.energisingImage}" th:src="'/images/energising/' + ${rasHero.energising.energisingImage.id}"></td>
 
-              <td><a th:href="'/home/class/' +${classHero.id}"  class="link-secondary">
-                <t th:text="${classHero.name}"></t>
+              <td><a th:href="'/home/detals/ras/' +${rasHero.id}"  class="link-secondary">
+                <t th:text="${rasHero.name}"></t>
               </a></td>
 
               <td>
-                <t th:text="${classHero.detals}"></t></td>
+                <t th:text="${rasHero.energising.full_text}"></t>
+              </td>
+
 
             </tr>
 
@@ -49,14 +46,13 @@
 
       </div>
 
-
   </div>
-
+</div>
   <footer th:insert="blocks/headerFooter/footer :: footer"></footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
           integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
           crossorigin="anonymous"></script>
-</div>
+
 
 </body>
 </html>
