--- a/src/main/resources/templates/menu/button4/admin/newWebSite/newWebSiteDisplay.html
+++ b/src/main/resources/templates/menu/button4/admin/newWebSite/newWebSiteDisplay.html
@@ -21,27 +21,25 @@
           <table class="table table-borderless">
             <thead>
             <tr>
-              <th colspan="5">Класс
+              <th colspan="4">Обновления
               </th>
             </tr>
             </thead>
 
             <tbody>
-            <tr th:each="classHero : ${id}">
+            <tr th:each="ability : ${path}">
 
 
-              <td><img th:src="'/images/class/' + ${classHero.id}"></td>
 
               <td>
-                <t th:text="${classHero.name}"></t>
+                <t th:text="${ability.name}"></t>
               </td>
-
               <td>
-                <t th:text="${classHero.detals}"></t></td>
-                <td><a th:href="'/admin/edit/class/' + ${classHero.id}">Изменит</a>
-                  <a th:href="@{'/admin/delete/class/' + ${classHero.id}}" >Удалить</a></td>
+                <t th:text="${ability.full_text}"></t>
+              </td>
+              <td><a th:href="'/admin/delete/newWebSite/' + ${ability.id}">Удалить</a><br>
+                <a th:href="'/admin/edit/newWebSite/' + ${ability.id}">Изменит</a></td>
 
-              </form>
             </tr>
 
 
