--- a/src/main/resources/templates/menu/button5/user/energising/energisingDisplay.html
+++ b/src/main/resources/templates/menu/button5/user/energising/energisingDisplay.html
@@ -8,38 +8,36 @@
 
 <body>
 <header th:insert="blocks/headerFooter/header :: header"></header>
-
+<div class="border border-dark">
 <div class="container-fluid" id="t">
-
-  <div id="blokc">
-
+  <div class="row">
 
 
-      <div class="border border-dark" id="pading">
 
         <div class="inline-block-table">
           <table class="table table-borderless">
             <thead>
             <tr>
-              <th colspan="3">Абилка
+              <th colspan="4">Синергия:
               </th>
             </tr>
             </thead>
 
             <tbody>
-            <tr th:each="classHero : ${class}">
+            <ul th:each="en : ${energising}">
 
 
-              <td><img th:src="'/images/class/' + ${classHero.id}"></td>
+              <td><img th:if="${en.energisingImage}" th:src="'/images/energising/' + ${en.energisingImage.id}"></td>
 
-              <td><a th:href="'/home/detals/class/' +${classHero.id}"  class="link-secondary">
-                <t th:text="${classHero.name}"></t>
+              <td><a th:href="'/home/detals/energising/' +${en.id}"  class="link-secondary">
+                <t th:text="${en.name}"></t>
               </a></td>
 
               <td>
-                <t th:text="${classHero.detals}"></t></td>
+                <t th:text="${en.full_text}"></t>
+              </td>
 
-            </tr>
+            </ul>
 
 
             </tbody>
@@ -50,11 +48,12 @@
       </div>
 
   </div>
+</div>
   <footer th:insert="blocks/headerFooter/footer :: footer"></footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
           integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
           crossorigin="anonymous"></script>
-</div>
+
 
 </body>
 </html>
