добавил методы добовление и удаление ролей

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -12,7 +12,7 @@
 <header th:insert="blocks/headerFooter/header :: header">
 
 </header>
-<div class="container">
+<div class="fon-1400px container">
     <form th:action="@{/login}" class="form-signin "method="post">
         <h2 class="form-signin-heading">Please sign in</h2>
         <p>
