--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -7,7 +7,7 @@
 
 
 html {font-family:sans-serif;line-height:1.15;min-height:100%;overflow-x:hidden}
-body{color:#3d3d3d;overflow:hidden;font-family:calibri,georgia,serif;min-height:100%;overflow-x:hidden;flex-direction:column;background-color:#f6f4f7;letter-spacing:-.25px margin: 0;
+body{color:#3d3d3d;overflow:hidden;font-family:calibri,georgia,serif;min-height:100%;overflow-x:hidden;flex-direction:column;background-color:#f6f4f7;letter-spacing:-.25px; margin: 0;
      display: flex; background-color: #eee; letter-spacing: -.25px; padding-top: 0px;  grid-template-rows: auto 1fr auto; padding-bottom: 0px;
                                                                                                                                                                                                      }
 
@@ -231,31 +231,25 @@ select.enemy {font-size:1em;padding:0 .5em;height:2em;margin-bottom:.25em}
 #start-ranks{display:inline-block;min-width:500px}
 #end-ranks{display:inline-block;vertical-align:top;min-width:400px}
 #start-ranks h3, #end-ranks h3 {margin-top:1em}
-#to-player {background-image:url(/images/player.svg);background-size:contain;width:2em;height:2em;display:inline-block;vertical-align:bottom;margin-left:.5em;cursor:pointer;border:1px #000 solid;background-color:#fff}
+
 #calculator-body p.hot {margin-top:0}
 #calculator-body ul.patch-notes{background:#fff;padding:1em 1em .5em 2em;width:max-content}
 
 /* Body - News */
 
-ul.patch-notes {list-style:none;padding-left:calc(1.4em + .7vw);list-style-image:url(/images/bullet.svg)}
-ul.patch-notes ul.patch-notes {list-style-image:url(/images/bullet-2.svg)}
+
 ul.patch-notes nobr {font-weight:bold}
 ul.patch-notes li nobr a {color:#3d3d3d!important}
 ul.patch-notes ol {list-style-image:none;margin-top:0}
-ul.just-ul {list-style:none;padding-left:calc(1.4em + .7vw);list-style-image:url(/images/bullet.svg)}
+
 ol {padding-left:calc(1.4em + .7vw)}
 
-ul.other-notes {list-style:none;padding-left:calc(1.4em + .7vw);list-style-image:url(/images/bullet.svg)}
-ul.other-notes ul.other-notes {list-style-image:url(/images/bullet-2.svg)}
+
 ul.other-notes nobr {font-weight:bold}
 ul.other-notes li nobr a {color:#3d3d3d!important}
 ul.other-notes i {color:#888}
 
 /* Body - Builder */
-
-.icon-axe{background-image:url(/images/axe.png)} .icon-enchantress{background-image:url(/images/enchantress.png)} .icon-ogre_magi{background-image:url(/images/ogre_magi.png)} .icon-tusk{background-image:url(/images/tusk.png)} .icon-drow_ranger{background-image:url(/images/drow_ranger.png)} .icon-bounty_hunter{background-image:url(/images/bounty_hunter.png)} .icon-clockwerk{background-image:url(/images/clockwerk.png)} .icon-shadow_shaman{background-image:url(/images/shadow_shaman.png)} .icon-bat_rider{background-image:url(/images/bat_rider.png)} .icon-tinker{background-image:url(/images/tinker.png)} .icon-anti_mage{background-image:url(/images/anti_mage.png)} .icon-tiny{background-image:url(/images/tiny.png)} .icon-crystal_maiden{background-image:url(/images/crystal_maiden.png)} .icon-beastmaster{background-image:url(/images/beastmaster.png)} .icon-juggernaut{background-image:url(/images/juggernaut.png)} .icon-timbersaw{background-image:url(/images/timbersaw.png)} .icon-queen_of_pain{background-image:url(/images/queen_of_pain.png)} .icon-puck{background-image:url(/images/puck.png)} .icon-witch_doctor{background-image:url(/images/witch_doctor.png)} .icon-slardar{background-image:url(/images/slardar.png)} .icon-chaos_knight{background-image:url(/images/chaos_knight.png)} .icon-treant_protector{background-image:url(/images/treant_protector.png)} .icon-luna{background-image:url(/images/luna.png)} .icon-furion{background-image:url(/images/furion.png)} .icon-morphling{background-image:url(/images/morphling.png)} .icon-lycan{background-image:url(/images/lycan.png)} .icon-venomancer{background-image:url(/images/venomancer.png)} .icon-omniknight{background-image:url(/images/omniknight.png)} .icon-razor{background-image:url(/images/razor.png)} .icon-windranger{background-image:url(/images/windranger.png)} .icon-phantom_assassin{background-image:url(/images/phantom_assassin.png)} .icon-abaddon{background-image:url(/images/abaddon.png)} .icon-sand_king{background-image:url(/images/sand_king.png)} .icon-slark{background-image:url(/images/slark.png)} .icon-sniper{background-image:url(/images/sniper.png)} .icon-viper{background-image:url(/images/viper.png)} .icon-shadow_fiend{background-image:url(/images/shadow_fiend.png)} .icon-lina{background-image:url(/images/lina.png)} .icon-terrorblade{background-image:url(/images/terrorblade.png)} .icon-riki{background-image:url(/images/riki.png)} .icon-mirana{background-image:url(/images/mirana.png)} .icon-doom{background-image:url(/images/doom.png)} .icon-kunkka{background-image:url(/images/kunkka.png)} .icon-troll_warlord{background-image:url(/images/troll_warlord.png)} .icon-keeper_of_the_light{background-image:url(/images/keeper_of_the_light.png)} .icon-necrophos{background-image:url(/images/necrophos.png)} .icon-templar_assassin{background-image:url(/images/templar_assassin.png)} .icon-alchemist{background-image:url(/images/alchemist.png)} .icon-disruptor{background-image:url(/images/disruptor.png)} .icon-medusa{background-image:url(/images/medusa.png)} .icon-dragon_knight{background-image:url(/images/dragon_knight.png)} .icon-lone_druid{background-image:url(/images/lone_druid.png)} .icon-gyrocopter{background-image:url(/images/gyrocopter.png)} .icon-lich{background-image:url(/images/lich.png)} .icon-tidehunter{background-image:url(/images/tidehunter.png)} .icon-enigma{background-image:url(/images/enigma.png)} .icon-techies{background-image:url(/images/techies.png)} .icon-death_prophet{background-image:url(/images/death_prophet.png)} .icon-mars{background-image:url(/images/mars.png)} .icon-zeus{background-image:url(/images/zeus.png)} .icon-sven{background-image:url(/images/sven.png)} .icon-faceless_void{background-image:url(/images/faceless_void.png)} .icon-invoker{background-image:url(/images/invoker.png)} .icon-dazzle{background-image:url(/images/dazzle.png)} .icon-grimstroke{background-image:url(/images/grimstroke.png)} .icon-io{background-image:url(/images/io.png)} .icon-visage{background-image:url(/images/visage.png)} .icon-winter_wyvern{background-image:url(/images/winter_wyvern.png)} .icon-jakiro{background-image:url(/images/jakiro.png)} .icon-rubick{background-image:url(/images/rubick.png)} .icon-pudge{background-image:url(/images/pudge.png)} .icon-lion{background-image:url(/images/lion.png)} .icon-nyx_assassin{background-image:url(/images/nyx_assassin.png)} .icon-oracle{background-image:url(/images/oracle.png)} .icon-huskar{background-image:url(/images/huskar.png)} .icon-bloodseeker{background-image:url(/images/bloodseeker.png)} .icon-monkey_king{background-image:url(/images/monkey_king.png)} .icon-snapfire{background-image:url(/images/snapfire.png)} .icon-broodmother{background-image:url(/images/broodmother.png)} .icon-spectre{background-image:url(/images/spectre.png)} .icon-legion_commander{background-image:url(/images/legion_commander.png)} .icon-chen{background-image:url(/images/chen.png)} .icon-dark_willow{background-image:url(/images/dark_willow.png)} .icon-brewmaster{background-image:url(/images/brewmaster.png)} .icon-storm_spirit{background-image:url(/images/storm_spirit.png)} .icon-ember_spirit{background-image:url(/images/ember_spirit.png)}
-
-.icon-mobile-redaxe_chief{background-image:url(/images/mobile/redaxe_chief.png)} .icon-mobile-unicorn{background-image:url(/images/mobile/unicorn.png)} .icon-mobile-ogre_mage{background-image:url(/images/mobile/ogre_mage.png)} .icon-mobile-tusk_champion{background-image:url(/images/mobile/tusk_champion.png)} .icon-mobile-egersis_ranger{background-image:url(/images/mobile/egersis_ranger.png)} .icon-mobile-soul_breaker{background-image:url(/images/mobile/soul_breaker.png)} .icon-mobile-sky_breaker{background-image:url(/images/mobile/sky_breaker.png)} .icon-mobile-defector{background-image:url(/images/mobile/defector.png)} .icon-mobile-frost_knight{background-image:url(/images/mobile/frost_knight.png)} .icon-mobile-heaven_bomber{background-image:url(/images/mobile/heaven_bomber.png)} .icon-mobile-taboo_witcher{background-image:url(/images/mobile/taboo_witcher.png)} .icon-mobile-stone_spirit{background-image:url(/images/mobile/stone_spirit.png)} .icon-mobile-the_source{background-image:url(/images/mobile/the_source.png)} .icon-mobile-skull_hunter{background-image:url(/images/mobile/skull_hunter.png)} .icon-mobile-swordman{background-image:url(/images/mobile/swordman.png)} .icon-mobile-ripper{background-image:url(/images/mobile/ripper.png)} .icon-mobile-phantom_queen{background-image:url(/images/mobile/phantom_queen.png)} .icon-mobile-shining_dragon{background-image:url(/images/mobile/shining_dragon.png)} .icon-mobile-desperate_doctor{background-image:url(/images/mobile/desperate_doctor.png)} .icon-mobile-abyssal_guard{background-image:url(/images/mobile/abyssal_guard.png)} .icon-mobile-hell_knight{background-image:url(/images/mobile/hell_knight.png)} .icon-mobile-warpwood_sage{background-image:url(/images/mobile/warpwood_sage.png)} .icon-mobile-lightblade_knight{background-image:url(/images/mobile/lightblade_knight.png)} .icon-mobile-wisper_seer{background-image:url(/images/mobile/wisper_seer.png)} .icon-mobile-water_spirit{background-image:url(/images/mobile/water_spirit.png)} .icon-mobile-abyssal_crawler{background-image:url(/images/mobile/abyssal_crawler.png)} .icon-mobile-lord_of_sand{background-image:url(/images/mobile/lord_of_sand.png)} .icon-mobile-werewolf{background-image:url(/images/mobile/werewolf.png)} .icon-mobile-poisonous_worm{background-image:url(/images/mobile/poisonous_worm.png)} .icon-mobile-argali_knight{background-image:url(/images/mobile/argali_knight.png)} .icon-mobile-thunder_spirit{background-image:url(/images/mobile/thunder_spirit.png)} .icon-mobile-wind_ranger{background-image:url(/images/mobile/wind_ranger.png)} .icon-mobile-shadowcrawler{background-image:url(/images/mobile/shadowcrawler.png)} .icon-mobile-evil_knight{background-image:url(/images/mobile/evil_knight.png)} .icon-mobile-dwarf_sniper{background-image:url(/images/mobile/dwarf_sniper.png)} .icon-mobile-venom{background-image:url(/images/mobile/venom.png)} .icon-mobile-shadow_devil{background-image:url(/images/mobile/shadow_devil.png)} .icon-mobile-flaming_wizard{background-image:url(/images/mobile/flaming_wizard.png)} .icon-mobile-fallen_witcher{background-image:url(/images/mobile/fallen_witcher.png)} .icon-mobile-doom_arbiter{background-image:url(/images/mobile/doom_arbiter.png)} .icon-mobile-pirate_captain{background-image:url(/images/mobile/pirate_captain.png)} .icon-mobile-berserker{background-image:url(/images/mobile/berserker.png)} .icon-mobile-tortola_elder{background-image:url(/images/mobile/tortola_elder.png)} .icon-mobile-soul_reaper{background-image:url(/images/mobile/soul_reaper.png)} .icon-mobile-shining_assassin{background-image:url(/images/mobile/shining_assassin.png)} .icon-mobile-venomancer{background-image:url(/images/mobile/venomancer.png)} .icon-mobile-storm_shaman{background-image:url(/images/mobile/storm_shaman.png)} .icon-mobile-siren{background-image:url(/images/mobile/siren.png)} .icon-mobile-dragon_knight{background-image:url(/images/mobile/dragon_knight.png)} .icon-mobile-razorclaw{background-image:url(/images/mobile/razorclaw.png)} .icon-mobile-helicopter{background-image:url(/images/mobile/helicopter.png)} .icon-mobile-blight_sorcerer{background-image:url(/images/mobile/blight_sorcerer.png)} .icon-mobile-tsunami_stalker{background-image:url(/images/mobile/tsunami_stalker.png)} .icon-mobile-dark_spirit{background-image:url(/images/mobile/dark_spirit.png)} .icon-mobile-devastator{background-image:url(/images/mobile/devastator.png)} .icon-mobile-god_of_war{background-image:url(/images/mobile/god_of_war.png)} .icon-mobile-god_of_thunder{background-image:url(/images/mobile/god_of_thunder.png)} .icon-mobile-strange_egg{background-image:url(/images/mobile/strange_egg.png)} .icon-mobile-shining_archer{background-image:url(/images/mobile/shining_archer.png)} .icon-mobile-ghost_prophet{background-image:url(/images/mobile/ghost_prophet.png)} .icon-mobile-fortune_teller{background-image:url(/images/mobile/fortune_teller.png)} .icon-mobile-rogue_guard{background-image:url(/images/mobile/rogue_guard.png)} .icon-mobile-winter_chiropteran{background-image:url(/images/mobile/winter_chiropteran.png)} .icon-mobile-grand_herald{background-image:url(/images/mobile/grand_herald.png)} .icon-mobile-grimtouch{background-image:url(/images/mobile/grimtouch.png)} .icon-mobile-umbra{background-image:url(/images/mobile/umbra.png)} .icon-mobile-frostblaze_dragon{background-image:url(/images/mobile/frostblaze_dragon.png)} .icon-mobile-scryer{background-image:url(/images/mobile/scryer.png)} .icon-mobile-goddess_of_light{background-image:url(/images/mobile/goddess_of_light.png)} .icon-mobile-thorn_predator{background-image:url(/images/mobile/thorn_predator.png)}
 
 .builder_options {margin:0;cursor:pointer;line-height:2}
 .builder_options input {-webkit-transform:scale(2.5);margin-right:1em}
@@ -334,7 +328,6 @@ h3#choose-heroes{margin-top:1em}
 .heroboard_block.black{background-color:rgba(0,0,0,.4)}
 .heroboard_block.white{background-color:rgba(0,0,0,.2)}
 
-.heroboard_delete{display:block;width:32px;height:32px;background-image:url(/images/delete.png);position:absolute;right:0;top:1.25em;cursor:pointer}
 
 #heroboard .builder-hero-cell-inner{width:72px;padding:10px 5px 11px}
 #heroboard .builder-hero-cell-inner div{background-size:contain;width:48px;height:48px}
@@ -778,7 +771,7 @@ a.back-to-top {display:block;background:0 0;width:50px;height:50px;opacity:.7;pa
 
 
 /* en */
-.list-inline-item1{background-color: rgba(44, 44, 44, 1);margin-right: 0;width: 280px;height: 42px;}
+.list-inline-item1{background-color: rgba(44, 44, 44, 1);margin-right: 0;width: 280px;height: 47px;}
 #wh{width: 350px;height: 48px;}
 
 
@@ -862,8 +855,8 @@ a.back-to-top {display:block;background:0 0;width:50px;height:50px;opacity:.7;pa
     background-color: rgb(41, 61, 87);
 }
 .centr-1400px{
-    max-width: 1420px;
-    margin:0 auto;
+	margin-left: 10%;
+	margin-right: 10%;
 }
 .fon-1400px{
     border: none;
@@ -921,6 +914,17 @@ a{
 }
 a:hover{
     text-decoration: none;
+}
+.wrapper {
+	padding: 20px;
+	max-width: 400px;
+}
+
+.demo-1 {
+	overflow: hidden;
+	display: -webkit-box;
+	-webkit-line-clamp: 3;
+	-webkit-box-orient: vertical;
 }
 
 .heroes-shop-desc {
@@ -1129,8 +1133,7 @@ footer{
 }
 
 
-
-
+.btn{padding: 0}
 
 .btn-group{
     width: 200px;
