--- a/src/main/resources/templates/menu/button2/user/guide/guideDetals.html
+++ b/src/main/resources/templates/menu/button2/user/guide/guideDetals.html
@@ -12,8 +12,8 @@
 
                 <h2>Гайды:</h2><br>
 
-                <div><img th:if="${guide.imageGuides.size() >=1}"
-                          th:src="'/images/guide/' + ${guide.imageGuides.get(0).id}">
+                <div><img th:if="${guide.filName1 != null}"
+                          th:src="'/img/' + ${guide.filName1}">
                     <t2 th:text="${guide.name}" class="h2"></t2>
                 </div>
                 <div>
@@ -29,22 +29,22 @@
                             <th th:if="${guide.energising1}" class="centr"><a class="link-success"
                                                                               th:if="${image.size() >=2}"
                                                                               th:href="'/home/detals/energising/' + ${image.get(1).id}">
-                                <t th:text="${guide.energising}" }></t>
+                                <t th:text="${guide.energising1}" }></t>
                             </a></th>
                             <th th:if="${guide.energising2}" class="centr"><a class="link-success"
                                                                               th:if="${image.size() >=3}"
                                                                               th:href="'/home/detals/energising/' + ${image.get(2).id}">
-                                <t th:text="${guide.energising}" }></t>
+                                <t th:text="${guide.energising2}" }></t>
                             </a></th>
                             <th th:if="${guide.energising3}" class="centr"><a class="link-success"
                                                                               th:if="${image.size() >=4}"
                                                                               th:href="'/home/detals/energising/' + ${image.get(3).id}">
-                                <t th:text="${guide.energising}" }></t>
+                                <t th:text="${guide.energising3}" }></t>
                             </a></th>
                             <th th:if="${guide.energising4}" class="centr"><a class="link-success"
                                                                               th:if="${image.size() >=5}"
                                                                               th:href="'/home/detals/energising/' + ${image.get(4).id}">
-                                <t th:text="${guide.energising}" }></t>
+                                <t th:text="${guide.energising4}" }></t>
                             </a></th>
                         </tr>
 
@@ -70,27 +70,29 @@
                 <div>
                     <h2 th:text="${guide.h2}"></h2>
                     <p th:text="${guide.full_text2}"></p>
-                    <img th:if="${guide.imageGuides.size() >=1}"
-                         th:src="'/images/guide/'+ ${guide.imageGuides.get(0).id}">
-                    <img th:if="${guide.imageGuides.size() >=2}"
-                         th:src="'/images/guide/'+ ${guide.imageGuides.get(1).id}">
+                    <img th:if="${guide.filName2!= null}"
+                         th:src="'/img/' + ${guide.filName2}">
+                    <img th:if="${guide.filName3 != null}"
+                         th:src="'/img/' + ${guide.filName3}">
                 </div>
                 <div>
                     <h2 th:text="${guide.h3}"></h2>
                     <p th:text="${guide.full_text3}"></p>
-                    <img th:if="${guide.imageGuides.size() >=3}"
-                         th:src="'/images/guide/'+ ${guide.imageGuides.get(2).id}">
-                    <img th:if="${guide.imageGuides.size() >=4}"
-                         th:src="'/images/guide/'+ ${guide.imageGuides.get(3).id}">
+                    <img th:if="${guide.filName4 != null}"
+                         th:src="'/img/' + ${guide.filName4}">
+                    <img th:if="${guide.filName5 != null}"
+                         th:src="'/img/' + ${guide.filName5}">
                 </div>
                 <div>
                     <h2 th:text="${guide.h4}"></h2>
                     <p th:text="${guide.full_text4}"></p>
-                    <img th:if="${guide.imageGuides.size() >=5}"
-                         th:src="'/images/guide/'+ ${guide.imageGuides.get(4).id}">
-                    <img th:if="${guide.imageGuides.size() >=6}"
-                         th:src="'/images/guide/'+ ${guide.imageGuides.get(5).id}">
+                    <img th:if="${guide.filName6 != null}"
+                         th:src="'/img/' + ${guide.filName6}">
+                    <img th:if="${guide.filName7 != null}"
+                         th:src="'/img/' + ${guide.filName7}">
                 </div>
+
+
                 <div>
                 <a th:href="${guide.href1}">
                     <t th:text="${guide.nameHref1}"></t>
