--- a/src/main/resources/templates/menu/button2/user/guide/guideDisplay.html
+++ b/src/main/resources/templates/menu/button2/user/guide/guideDisplay.html
@@ -9,20 +9,21 @@
 <body>
 <header th:insert="blocks/headerFooter/header :: header"></header>
 <div class="centr-1400px fon-1400px">
-      <h2>Гайды:</h2>
+      <h2>Стратегии игры:</h2>
+    <div class="row">
 
-        <div class="grid px-600" th:each="guide : ${guide}">
+        <div class="col-md-4" th:each="guide : ${guide}">
 
-            <ul>
-              <li><img th:if="${guide.id}" th:src="'/images/guide/' + ${guide.id}"></li>
+            <ul class="inline-px">
+                <li><a th:href="'/home/detals/guide/' +${guide.id}"  class="link-secondary"><img th:if="${guide.id}" th:src="'/img/' + ${guide.filName1}" width="60px" height="auto"></a></li>
 
-              <li><a th:href="'/home/detals/guide/' +${guide.guide.id}"  class="link-secondary">
-                <t th:text="${guide.guide.name}"></t></a></li>
+              <li>
+                <t th:text="${guide.name}"></t></li>
 
-              <li><t th:text="${guide.guide.full_text}"></t></li>
+              <li class="wrapper"><p class="demo-1" th:text="${guide.full_text}"></p></li>
             </ul>
         </div>
-
+    </div>
 
   </div>
 
