--- a/src/main/resources/templates/menu/button2/user/hero/heroDisplay.html
+++ b/src/main/resources/templates/menu/button2/user/hero/heroDisplay.html
@@ -15,9 +15,12 @@
 
             <div class="col">
                     <div th:each="hero : ${displayHeroTir1}" class="list-inline-item1">
-                        <li class="list-inline-item bk"><img th:if="${hero.imageHero}"
+                        <li class="list-inline-item bk btn" tabindex="0" data-bs-toggle="popover" data-bs-placement="auto"  data-bs-trigger="focus"  th:data-bs-content-id="examplePopover +${hero.id}"><img th:if="${hero.imageHero}"
                                                              th:src="'/images/hero/' + ${hero.imageHero.get(0).id}"
                                                              height="35px" width="40px"></li>
+
+                        <div class="modal fade " th:id="examplePopover +${hero.id}" tabindex="-1" aria-hidden="true">
+                            <div th:insert="menu/button2/user/hero/detalsHeroInDespley :: div"></div></div>
                         <li class="list-inline-item bk"><a th:href="'/home/detals/hero/' +${hero.id}"
                                                            class="nav-link px-2 text-yellow tir1">
                             <t th:text="${hero.nameHero}"></t>
@@ -40,12 +43,17 @@
                                       height="28px" width="28px"></a></li>
                                 </span>
                     </div>
+
                </div>
+
                <div class="col">
                     <div th:each="hero : ${displayHeroTir2}" class="list-inline-item1">
-                        <li class="list-inline-item bk"><img th:if="${hero.imageHero}"
+                        <li class="list-inline-item bk btn" tabindex="0" data-bs-toggle="popover" data-bs-placement="auto"  data-bs-trigger="focus"  th:data-bs-content-id="examplePopover +${hero.id}"><img th:if="${hero.imageHero}"
                                                              th:src="'/images/hero/' + ${hero.imageHero.get(0).id}"
                                                              height="35px" width="40px"></li>
+                        <div class="modal fade " th:id="examplePopover +${hero.id}" tabindex="-1" aria-hidden="true">
+                            <div th:insert="menu/button2/user/hero/detalsHeroInDespley :: div"></div></div>
+
                         <li class="list-inline-item bk"><a th:href="'/home/detals/hero/' +${hero.id}"
                                                            class="nav-link  text-yellow tir2">
                             <t th:text="${hero.nameHero}"></t>
@@ -75,9 +83,12 @@
 
                 <div class="col">
                     <div th:each="hero : ${displayHeroTir3}" class="list-inline-item1">
-                        <li class="list-inline-item bk"><img th:if="${hero.imageHero}"
+                        <li class="list-inline-item bk btn" tabindex="0" data-bs-toggle="popover" data-bs-placement="auto"  data-bs-trigger="focus"  th:data-bs-content-id="examplePopover +${hero.id}"><img th:if="${hero.imageHero}"
                                                              th:src="'/images/hero/' + ${hero.imageHero.get(0).id}"
                                                              height="35px" width="40px"></li>
+
+                        <div class="modal fade " th:id="examplePopover +${hero.id}" tabindex="-1" aria-hidden="true">
+                            <div th:insert="menu/button2/user/hero/detalsHeroInDespley :: div"></div></div>
                         <li class="list-inline-item bk"><a th:href="'/home/detals/hero/' +${hero.id}"
                                                            class="nav-link px-2 text-yellow tir3">
                             <t th:text="${hero.nameHero}"></t>
@@ -106,9 +117,12 @@
 
                 <div class="col">
                     <div th:each="hero : ${displayHeroTir4}" class="list-inline-item1">
-                        <li class="list-inline-item bk"><img th:if="${hero.imageHero}"
+                        <li class="list-inline-item bk btn" tabindex="0" data-bs-toggle="popover" data-bs-placement="auto"  data-bs-trigger="focus"  th:data-bs-content-id="examplePopover +${hero.id}"><img th:if="${hero.imageHero}"
                                                              th:src="'/images/hero/' + ${hero.imageHero.get(0).id}"
                                                              height="35px" width="40px"></li>
+                        <div class="modal fade " th:id="examplePopover +${hero.id}" tabindex="-1" aria-hidden="true">
+                            <div th:insert="menu/button2/user/hero/detalsHeroInDespley :: div"></div></div>
+
                         <li class="list-inline-item bk"><a th:href="'/home/detals/hero/' +${hero.id}"
                                                            class="nav-link px-2 text-yellow tir4">
                             <t th:text="${hero.nameHero}"></t>
@@ -137,9 +151,12 @@
 
                 <div class="col">
                     <div th:each="hero : ${displayHeroTir5}" class="list-inline-item1">
-                        <li class="list-inline-item bk"><img th:if="${hero.imageHero}"
+                        <li class="list-inline-item bk btn" tabindex="0" data-bs-toggle="popover" data-bs-placement="auto"  data-bs-trigger="focus"  th:data-bs-content-id="examplePopover +${hero.id}"><img th:if="${hero.imageHero}"
                                                              th:src="'/images/hero/' + ${hero.imageHero.get(0).id}"
                                                              height="35px" width="40px"></li>
+
+                        <div class="modal fade " th:id="examplePopover +${hero.id}" tabindex="-1" aria-hidden="true">
+                            <div th:insert="menu/button2/user/hero/detalsHeroInDespley :: div"></div></div>
                         <li class="list-inline-item bk"><a th:href="'/home/detals/hero/' +${hero.id}"
                                                            class="nav-link px-2 text-yellow tir5">
                             <t th:text="${hero.nameHero}"></t>
