--- a/src/main/resources/templates/menu/button3/user/courierExperience.html
+++ b/src/main/resources/templates/menu/button3/user/courierExperience.html
@@ -19,9 +19,9 @@
 
                     <p>Курьер - это единственный юнит игре, которым непосредственно управляет игрок.</p>
 
-                    <p>У курьера есть 5 активных способностей (перемещение существ, вернуть существо с поля в инвентарь, продать существо, обновить существ на доске, купить опыт) и можно качать его уровень.</p>
+                    <p>У курьера есть 7 активных способностей (перемещение существ, вернуть существо с поля в инвентарь, продать существо, обновить существ на доске, купить опыт,разбор предметов, бан синергии) и можно качать его уровень.</p>
 
-                    <p>Стартовый уровень равен единице, а максимальный - 10.
+                    <p>Стартовый уровень равен единице, а максимальный за голду <img src="/image/gold.png"> - 10. Дальше можно только за книжки которые вы получаете с рассы людей.
 
                     </p><p>Перед началом каждого раунда игроку начисляется 1 опыт. Как-то увеличить или уменьшить это базовое начисление опыта в игре невозможно.</p>
 
@@ -129,24 +129,24 @@
                         </tr>
                         <tr>
                             <td class="level">4</td>
-                            <td>50%</td>
-                            <td>35%</td>
+                            <td>45%</td>
+                            <td>40%</td>
                             <td>15%</td>
                             <td>0%</td>
                             <td>0%</td>
                         </tr>
                         <tr>
                             <td class="level">5</td>
-                            <td>40%</td>
                             <td>35%</td>
+                            <td>40%</td>
                             <td>23%</td>
                             <td>2%</td>
                             <td>0%</td>
                         </tr>
                         <tr>
                             <td class="level">6</td>
-                            <td>33%</td>
                             <td>30%</td>
+                            <td>33%</td>
                             <td>30%</td>
                             <td>7%</td>
                             <td>0%</td>
@@ -163,24 +163,24 @@
                             <td class="level">8</td>
                             <td>24%</td>
                             <td>30%</td>
-                            <td>30%</td>
-                            <td>15%</td>
+                            <td>28%</td>
+                            <td>17%</td>
                             <td>1%</td>
                         </tr>
                         <tr>
                             <td class="level">9</td>
                             <td>22%</td>
-                            <td>30%</td>
                             <td>25%</td>
-                            <td>20%</td>
+                            <td>25%</td>
+                            <td>25%</td>
                             <td>3%</td>
                         </tr>
                         <tr>
                             <td class="level">10</td>
-                            <td>19%</td>
+                            <td>20%</td>
+                            <td>22%</td>
                             <td>25%</td>
-                            <td>25%</td>
-                            <td>25%</td>
+                            <td>27%</td>
                             <td>6%</td>
                         </tr>
                         </tbody>
